# hiraeth

./: .env.example  .formatter.exs  .gitattributes  .gitignore  AGENTS.md  DESIGN.md  LICENSE  Makefile  README.md  authoritative-ui-design.html  compose.yaml  mix.exs  worklog.md
config/: dev.exs  (+4 more)
sidecar/: Dockerfile  README.md  pyproject.toml
sidecar/app/: main.py  models.py  url_validation.py
sidecar/app/adapters/: shopify.py  squarespace.py  squarespace_images.py  woocommerce.py  wordpress.py
sidecar/app/routers/: fetch.py  health.py  scrape.py
sidecar/app/spiders/: astra_house.py  base_spider.py  deep_vellum_parsing.py  deep_vellum_spider.py  deep_vellum_stealthy.py  generic_book_spider.py  two_lines_detail.py
sidecar/tests/: test_astra_house_spider.py  test_base_spider.py  test_contract_snapshot.py  test_cors.py  test_deep_vellum_spider.py  test_deep_vellum_stealthy.py  test_fetch.py  test_generic_book_spider_shopify.py  test_health.py  test_scrape.py  test_scrape_deep_vellum.py  test_scrape_deep_vellum_detail.py  test_scrape_two_lines_detail.py  test_typed_errors.py  test_woocommerce_adapter.py
sidecar/tests/fixtures/: astra_house_detail_early_sobrieties.html  astra_house_imprint.html  deep_vellum_catalog.html  deep_vellum_detail_brazillionaires.html  deep_vellum_detail_rilke.html  deep_vellum_stealthy_catalog.html  deep_vellum_stealthy_detail_brazillionaires.html  deep_vellum_stealthy_detail_partial.html  deep_vellum_stealthy_detail_rilke.html  deep_vellum_stealthy_embedded_catalog.html  deep_vellum_stealthy_partial_catalog.html  publisher_catalog.html  (+3 more)
(+396 files in other folders)
