[project]
name = "hiraeth-sidecar"
version = "0.1.0"
description = "Scrapling FastAPI sidecar for Hiraeth ingestion orchestration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "scrapling[fetchers]>=0.3.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
